--- a/Homepage.css
+++ b/Homepage.css
@@ -45,8 +45,33 @@ border:solid white;
     width: 800px;
     border-radius: 20px;
   }
+  .slideOneByOne{
+    border-radius: 20px;
+    margin-left: 30px;
+    margin-top: 10px;
+    width:80%;
+    height:50px;
+    padding:20px 15px;
+     display:flex;
+     align-items: center;
+
+  }
+  .slideOneByOne>img{  
+    width:20%; 
+    border-radius:8px;
+   height:50px;
+  }
+  .slideOneByOne>h4{  
+   margin-left:12px;
+  }
   #Trend_list{
-   height:300px;
+    border: solid green;
+    color: white;
+   height:420px;
+   width: 300px;
+   display: block;
+  justify-content: right;
+  justify-content: center;
   }
 
   #sales_buttons{
