--- a/Homepage.css
+++ b/Homepage.css
@@ -4,6 +4,10 @@
 background-color: #121212;
 }
 
+/* #innerContainer{                    Its css is given java script
+width: 1000px;
+} */
+
 #navbar
 {
     border: solid;
@@ -104,6 +108,33 @@ display: flex;
     width:500px
    }
 
+   
+
+   #freeGamesContainer{
+    margin-top: 20px;
+    background-color: #2a2a2a;
+color: white;
+padding:40px 50px;
+   }
+   
+   #freeGamesContainer>div>svg{
+    width: 80px;
+       }
+  #freeGamesContainer>div{
+      display: flex;
+      gap: 20px;
+      margin-bottom: 30px;
+           }
+
+    
    #freeGames{
-    background-color: grey;
+    background-color: transparent;
+    display: grid;
+    grid-template-columns: repeat(4,230px);
+    justify-content: space-evenly;
+    border-radius: 10px;
+   }
+   #freeGames img{
+    width: 100%;
+    border-radius: 10px;
    }
